--- a/package.json
+++ b/package.json
@@ -11,7 +11,13 @@
     "express": "^4.16.4",
     "jsonwebtoken": "^8.5.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "eslint": "^5.3.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-import": "^2.17.2",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-react": "^7.12.4"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
