--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "clarifai": "^2.9.0",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
-    "jsonwebtoken": "^8.5.1"
+    "jsonwebtoken": "^8.5.1",
+    "pg": "^7.10.0",
+    "pg-hstore": "^2.3.2"
   },
   "devDependencies": {
     "eslint": "^5.3.0",
