--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "server for language learning app Vocappulary",
   "main": "app.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon app.js"
+  },
   "dependencies": {
     "@google-cloud/text-to-speech": "^0.5.1",
     "body-parser": "^1.19.0",
@@ -11,7 +15,8 @@
     "express": "^4.16.4",
     "jsonwebtoken": "^8.5.1",
     "pg": "^7.10.0",
-    "pg-hstore": "^2.3.2"
+    "pg-hstore": "^2.3.2",
+    "sequelize": "^5.8.2"
   },
   "devDependencies": {
     "eslint": "^5.3.0",
@@ -19,9 +24,6 @@
     "eslint-plugin-import": "^2.17.2",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.12.4"
-  },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
