--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 #moch data
-moch.js
+mochData
 
-#temp
-pgadmin4
+#vsCode Debugger
+.vsCode
 
 # Logs
 logs
@@ -63,6 +63,7 @@ typings/
 # dotenv environment variables file
 .env
 awsdb.env
+local.env
 
 # next.js build output
 .next
