--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
   },
   "dependencies": {
     "@google-cloud/text-to-speech": "^0.5.1",
+    "aws-sdk": "^2.448.0",
     "body-parser": "^1.19.0",
     "clarifai": "^2.9.0",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "jsonwebtoken": "^8.5.1",
     "pg": "^7.10.0",
-    "pg-hstore": "^2.3.2",
-    "sequelize": "^5.8.2"
+    "sequelize": "^5.8.3"
   },
   "devDependencies": {
     "eslint": "^5.3.0",
