--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cloudinary": "^1.14.0",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
+    "firebase-admin": "^7.3.0",
     "jsonwebtoken": "^8.5.1",
     "pg": "^7.10.0",
     "sequelize": "^5.8.3"
