speech to text is sending back undefined but the request go through

--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,4 @@ vocappulary-beff8c451a9b.json
 vocappulary-239516-firebase-adminsdk-pxse1-8ef2990ba1.json
 My First Project-328292104d68.json
 tts.json
+anatha one-2983caf215ff.json
