--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "start": "nodemon app.js"
   },
   "dependencies": {
+    "@google-cloud/speech": "^2.3.1",
     "@google-cloud/text-to-speech": "^0.5.1",
     "aws-sdk": "^2.448.0",
     "axios": "^0.18.0",
     "body-parser": "^1.19.0",
+    "btoa": "^1.2.1",
     "clarifai": "^2.9.0",
     "cloudinary": "^1.14.0",
     "dotenv": "^7.0.0",
