--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cloudinary": "^1.14.0",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
+    "express-fileupload": "^1.1.4",
     "firebase-admin": "^7.3.0",
     "jest": "^24.8.0",
     "jsonwebtoken": "^8.5.1",
