--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@google-cloud/speech": "^2.3.1",
     "@google-cloud/text-to-speech": "^0.5.1",
+    "audio-context": "^1.0.3",
     "aws-sdk": "^2.448.0",
     "axios": "^0.18.0",
     "body-parser": "^1.19.0",
