--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "jsonwebtoken": "^8.5.1",
     "pg": "^7.10.0",
     "sequelize": "^5.8.3",
-    "ws": "^7.0.0"
+    "socket.io": "^2.2.0"
   },
   "devDependencies": {
     "eslint": "^5.3.0",
